used css when I couldn't figure out how the for loop

--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-    <head>
-        <style>
-            main {
-                display: flex;
-                flex-direction: row;
-                justify-content: space-evenly;
-            }
-        </style>
-    </head>
-    <body>
-        <main>
 
-        </main>
-        <script src="./index.js"></script>
-    </body>
+<head>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <img id="grass" src="assets/grass.jpg" alt="grass">
+    <img id="sky" src="assets/sky.webp" alt="sky">
+    <main>
+
+    </main>
+
+    <script src="./index.js"></script>
+</body>
+
 </html>
